2008-01-18  James Youngman  <jay@gnu.org>

	* configure.ac: Prepare for release of version 1.1.1.
	* NEWS: Likewise.
	* docs/cssc.texi: Updated copyright year.  Bumped the revision
	number and updated the VERSION macro.  Updated the "UPDATED"
	variable to the current time.
	
	* version.h (version): Don't show the RCS ID of the main program
	in the version output; just keep the existing CSSC release number.

	* showconfig.cc: Updated copyright notice to GPL3.
	 (show_system_line_max): Removed awkward line break.

2008-01-07  James Youngman  <jay@gnu.org>

	* sf-val.cc (validate_isomorphism): Warn if a delta has two
	derived deltas on the trunk.  

	* release.h: Fixed typo in the file header comment.

	* delta-table.h (class cssc_delta_table): Don't initialise sid
	objects from NULL.  

	* fileiter.cc (sccs_file_iterator): Ignore subdirectories, even if
	they do start with "s.".
	* file.cc (is_directory): New function.
	* file.h: Declare is_directory.

2008-01-06  James Youngman  <jay@gnu.org>

	* sf-delta.cc (add_delta): Removed obsolete "XXX" comments.
	* sf-prs.cc (get): Likewise.
	* cdc.cc (main): Avoid initialising a sid object by assignment
	from NULL, because it's not quite clear what that is intended to
	do.  Instead, use an assignment from sid::null_delta().
	* sid.cc (null_sid): Implement the function.
	* sid.h (class sid): Declare sid::null_sid().
	* get.cc (main): Avoid initialising a sid object by assignment
	from NULL.
	* delta.cc (delta_main): Likewise.
	* val.cc (main): Likewise.
	* rmdel.cc (main): Likewise.
	* unget.cc (main): Likewise.
	* sccsfile.cc (sccs_file::sccs_file): Likewise.
	* sf-admin.cc (admin): Likewise.
	* prs.cc (main): Likewise; also disable the -R option.

	* sf-val.cc (validate_isomorphism): Extend the comment setting out
	the design for this method.  The method is still unimplemented,
	though.  

	Various tidyings-up of TODO items.
	* prompt.cc (prompt_user): Now that this code is well tested,